# TIDES

./: CMakeLists.txt  INSTALL.txt  README.md
doc/: README.md  opt.bpp
doc/example/: chr_limits.txt  example_run.Rmd
doc/example/additive_model/: additive_model_opt.bpp
doc/example/full_model/: full_model_opt.bpp
doc/example/neutral_model/: neutral_model_opt.bpp
doc/example/recessive_model/: recessive_model_opt.bpp
src/: BppApplication.cpp  BppApplication.h  BppApplicationTools.cpp  BppApplicationTools.h  BppAttributesTools.cpp  BppAttributesTools.h  BppClonable.h  BppExceptions.cpp  BppExceptions.h  BppFileTools.cpp  BppFileTools.h  BppIntegerTools.h  BppNestedStringTokenizer.cpp  BppNestedStringTokenizer.h  BppOutputStream.h  BppStringTokenizer.cpp  BppStringTokenizer.h  BppTextTools.cpp  BppTextTools.h  CMakeLists.txt  Child.cpp  Child.h  Diploid.cpp  Diploid.h  GenomicRanges.cpp  GenomicRanges.h  Global.h  HaploidGenome.h  HashNode.h  HashTable.cpp  HashTable.h  RealDiploid.cpp  RealDiploid.h  RecombinationMap.cpp  RecombinationMap.h  Simulator.cpp  Simulator.h  Tools.cpp  Tools.h  Utils.h  (+4 more)
tools/: MLE_trios.R  MLE_trios.nb
tools/bash_scripts/: extract_s.sh  filter_vcfs.sh
tools/r_scripts/: abc_filter.Rmd  fast_param_inf.R  format_vcf.R  get_hg_data.R  joint_plots.R  simulation_study.Rmd  write_slim_script.R
